# gitwig

./: .clippy.toml  .gitignore  CHANGELOG.md  Cargo.toml  GEMINI.md  LICENSE  MERGE_CONFLICT_PLAN.md  Makefile  README.md  REFACTORING_PLAN.md  deny.toml  dummy_path.toml  install.ps1  install.sh  install.sh.sha256  keybindings.toml  test_excludes2  test_excludes2.rs
.agent/: CODEMAP.md  INSTRUCTIONS.md  LARGE_REPO_PERFORMANCE_PLAN.md  REFACTORING_PLAN.md  ROADMAP.md  STYLE_GUIDE.md  audit_remediation_plan.md  distribution_plan.md  homepage_feature_suggestions.md
.agent/skills/prepare-release/: SKILL.md
.agent/skills/rust-quality/: SKILL.md
.agent/skills/sync-docs/: SKILL.md
.claude/: settings.local.json
.github/workflows/: cd.yml  ci.yml
Formula/: gitwig.rb
config/: config.toml  keybindings.toml
config/themes/: catppuccin.theme  cyberpunk.theme  default.theme  dracula.theme  forest.theme  gruvbox.theme  monokai.theme  nord.theme  oceanic.theme  onedark.theme  rosepine.theme  solarized_dark.theme
docs/: configuration.md  detail_view.md  features.md  font_support.md  installation.md  keybindings.md  panels.md  status_indicators.md
gitwig-core/: Cargo.toml  LICENSE
gitwig-core/src/: lib.rs
resources/: preview.cast
scripts/: generate_changelog.py  install.ps1  install.ps1.sha256  install.sh  install.sh.sha256  uninstall.ps1  uninstall.ps1.sha256  uninstall.sh  uninstall.sh.sha256
snap/: snapcraft.yaml
src/: app.rs  config.rs  debug_log.rs  input.rs  keybindings.rs  main.rs  mouse.rs  queue.rs  repo.rs  stats.rs  status.rs  terminal.rs  ui.rs  ui_detail.rs
src/app/: actions.rs  git.rs  mod.rs  navigation.rs  tests.rs  workspace.rs
src/components/: branch_list.rs  cmd_bar.rs  commit_list.rs  diff.rs  file_tree.rs  forge_list.rs  forge_pr_list.rs  mod.rs  reflog_list.rs  stash_list.rs  status_list.rs  submodule_list.rs  tag_list.rs  worktree_list.rs
src/components/cmd_bar/: detail.rs  main.rs  mod.rs  popups.rs
src/keys/: key_config.rs  key_list.rs  mod.rs  symbols.rs
src/popups/: about.rs  add_remote.rs  commit.rs  commit_history.rs  confirm.rs  create_branch.rs  create_tag.rs  debug.rs  detail_help.rs  error.rs  forge_comment.rs  help.rs  import.rs  inspect.rs  legend.rs  loading.rs  log_search.rs  mod.rs  remote_picker.rs  repo_settings.rs  repo_theme.rs  search_columns.rs  settings.rs  stash_msg.rs  stashing_ui.rs  stats.rs  submodule.rs  worktree.rs
src/tabs/: branches.rs  file_history.rs  files.rs  graph.rs  home.rs  logs.rs  mod.rs  remotes.rs  stashes.rs  tags.rs  workspace.rs
src/ui/: draw.rs  layout.rs  legacy_ui.rs  mod.rs  scrollbar.rs  style.rs  syntax.rs  ui_detail.rs
wix/: License.rtf  main.wxs
