[package]
name = "twig"
version = "0.1.0"
edition = "2024"
authors = ["tareqmy <tareq.y@gmail.com>"]
description = "a rust based tui an alternative to sourcetree"
rust-version = "1.87.0"
exclude = [".github/*", ".vscode/*", "assets/*"]
homepage = "https://github.com/tareqmy/twig"
repository = "https://github.com/tareqmy/twig"
readme = "README.md"
license = "MIT"
categories = ["command-line-utilities"]
keywords = ["git", "cli", "terminal", "tui", "rust"]

[dependencies]
crossterm = "0.29.0"
tui = "0.19"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "6.0.0"