[package]
name = "gitwig"
version = "1.3.2"
edition = "2024"
authors = ["tareqmy <tareq.y@gmail.com>"]
description = "a rust based tui, an alternative to sourcetree and gitui"
rust-version = "1.87.0"
exclude = [".github/*", ".vscode/*", "assets/*"]
homepage = "https://github.com/tareqmy/gitwig"
repository = "https://github.com/tareqmy/gitwig"
readme = "README.md"
license = "MIT"
categories = ["command-line-utilities"]
keywords = ["git", "cli", "terminal", "tui", "rust"]

[dependencies]
crossterm = "0.29.0"
ratatui = { version = "0.30", features = ["crossterm_0_29"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "6.0.0"
git2 = { version = "0.21", default-features = false }
libc = "0.2"