[package]
name = "gitwig"
version = "2.0.2"
edition = "2024"
authors = ["tareqmy <tareq.y@gmail.com>"]
description = "a rust based tui, an alternative to sourcetree and gitui"
rust-version = "1.87.0"
exclude = [".github/*", ".vscode/*", "assets/*"]
homepage = "https://github.com/tareqmy/gitwig"
repository = "https://github.com/tareqmy/gitwig"
readme = "README.md"
license = "MIT"
categories = ["command-line-utilities"]
keywords = ["git", "cli", "terminal", "tui", "rust"]

[workspace]
members = [".", "gitwig-core"]

[dependencies]
gitwig-core = { path = "gitwig-core" }
crossterm = "0.29.0"
ratatui = { version = "0.30", features = ["crossterm_0_29"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "6.0.0"
git2 = { version = "0.21", default-features = false }
libc = "0.2"
notify = "6.1.1"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
strip = "debuginfo"

[profile.dev.package."ratatui"]
opt-level = 3
[profile.dev.package."git2"]
opt-level = 3