[package]
name = "gitwig-core"
version = "2.1.2"
edition = "2024"
authors = ["tareqmy <tareq.y@gmail.com>"]
description = "Repository inspection and core Git backend for Gitwig TUI client"
license = "MIT"
repository = "https://github.com/tareqmy/gitwig"
homepage = "https://github.com/tareqmy/gitwig"
readme = "../README.md"

[dependencies]
git2 = { version = "0.21", default-features = false }
dirs = "6.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
